--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,3 +1,11 @@
+.progress-icon {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  width: 120px;
+  height: 120px;
+}
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
