--- a/src/styles/step2.css
+++ b/src/styles/step2.css
@@ -5,11 +5,11 @@
   justify-content: space-around;
   text-align: center;
   align-items: center;
-  background-color: black;
+  background-color: white;
 }
 
 .wrapper-step-2-image {
-  width: 40vw;
+  width: 50vw;
 }
 @media only screen and (max-width: 600px) {
   .wrapper-step-2 {
