--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,9 +1,8 @@
-.progress-icon {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  width: 120px;
-  height: 120px;
+main::-webkit-scrollbar {
+  display: none;
+}
+main {
+  -ms-overflow-style: none;
 }
 
 html {
